tests/reference/asr-template_error_01-1031bce.stderr
semantic error: Type mismatch in function call, the function expects 't' but 's' was provided
  --> tests/errors/template_error_01.f90:75:55
   |
75 |             avg = avg_S_from_T(d1, D_divided_by_T(d1, s1), d2, D_divided_by_S(d2, s2))
   |                                                       ^^ type 't' expected, but 's' provided
   |
45 |            pure function D_divided_by_T(n, d) result(quotient)
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
50 |    
   | ...^ function definition has parameter type 't'
